Migration to python-telegram-bot library

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pyTelegramBotAPI==4.10.0
 SQLAlchemy==2.0.5.post1
 mariadb==1.1.6
 environs==9.5.0
+python-telegram-bot==20.1
+pydantic==1.10.2
+packaging==23.0
